--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="IAB251_WPF_ASS2.MainWindow"
+﻿<Window x:Class="InterportCargo.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:IAB251_WPF_ASS2"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Interport Cargo" Height="350" Width="525">
     <Grid>
-        
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Button Content="Register" Width="200" Height="40" Margin="5" Click="Register_Click"/>
+            <Button Content="Login" Width="200" Height="40" Margin="5" Click="Login_Click"/>
+            <Button Content="Request Quotation" Width="200" Height="40" Margin="5" Click="RequestQuotation_Click"/>
+        </StackPanel>
     </Grid>
 </Window>
