--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,12 +1,13 @@
-﻿<Window x:Class="InterportCargo.MainWindow"
+﻿<Window x:Class="IAB251_WPF_ASS2.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Interport Cargo" Height="350" Width="525">
+        Title="Interport Cargo" Height="450" Width="800
+        ">
     <Grid>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Button Content="Register" Width="200" Height="40" Margin="5" Click="Register_Click"/>
-            <Button Content="Login" Width="200" Height="40" Margin="5" Click="Login_Click"/>
-            <Button Content="Request Quotation" Width="200" Height="40" Margin="5" Click="RequestQuotation_Click"/>
+            <Button Content="Register" Width="380" Height="40" Margin="5" Click="Register_Click"/>
+            <Button Content="Login" Width="380" Height="40" Margin="5" Click="Login_Click"/>
+            <Button Content="Request Quotation" Width="380" Height="40" Margin="5" Click="RequestQuotation_Click"/>
         </StackPanel>
     </Grid>
 </Window>
