--- a/App.xaml
+++ b/App.xaml
@@ -1,9 +1,9 @@
 ﻿<Application x:Class="IAB251_WPF_ASS2.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:IAB251_WPF_ASS2"
+             xmlns:local="clr-namespace:IAB251_WPF_ASS2.Models"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <local:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
     </Application.Resources>
 </Application>
