--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -3,11 +3,13 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Interport Cargo" Height="450" Width="800
         ">
+    
     <Grid>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Button Content="Register" Width="380" Height="40" Margin="5" Click="Register_Click"/>
-            <Button Content="Login" Width="380" Height="40" Margin="5" Click="Login_Click"/>
-            <Button Content="Request Quotation" Width="380" Height="40" Margin="5" Click="RequestQuotation_Click"/>
+            <Button Content="Register" Width="300" Height="40" Margin="0,10,0,0" Click="Register_Click"/>
+            <Button Content="Login" Width="300" Height="40" Margin="0,10,0,0" Click="Login_Click"/>
+            <Button Content="Request Quotation" Width="300" Height="40" Margin="0,10,0,0" Click="RequestQuotation_Click"
+                    Visibility="{Binding IsLoggedIn, Converter={StaticResource BoolToVisibilityConverter}}"/>
         </StackPanel>
     </Grid>
 </Window>
