--- a/QuotationRequest.xaml
+++ b/QuotationRequest.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="IAB251_WPF_ASS2.QuotationRequestWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Quotation Request" Height="500" Width="800">
+        Title="Quotation Request" Height="625" Width="800">
     <Grid>
         <StackPanel Margin="10">
             <TextBlock Text="Source:" />
@@ -26,16 +26,27 @@
             <TextBlock Text="Height:" Margin="0,10,0,0" />
             <TextBox x:Name="HeightTextBox" />
 
-            <TextBlock Text="Port Type:" Margin="0,10,0,0" />
-            <TextBox x:Name="PortTypeTextBox" />
+            <TextBlock Text="Import/Export:" Margin="0,10,0,0" />
+            <ComboBox x:Name="PortComboBox" Width="200" Height="30">
+                <ComboBoxItem Content="Import" />
+                <ComboBoxItem Content="Export" />
+            </ComboBox>
+            
+
 
             <TextBlock Text="Packing Type:" Margin="0,10,0,0" />
-            <TextBox x:Name="PackingTypeTextBox" />
-
+            <ComboBox x:Name="PackingComboBox" Width="200" Height="30">
+                <ComboBoxItem Content="Packing" />
+                <ComboBoxItem Content="Unpacking" />
+            </ComboBox>
+            
             <TextBlock Text="Quarantine Details:" Margin="0,10,0,0" />
+            <TextBlock Text="(Origin, Treatment History)" Margin="0,0,0,0" FontSize="9"/>
             <TextBox x:Name="QuarantineDetailsTextBox" />
 
             <TextBlock Text="Fumigation Details:" Margin="0,10,0,0" />
+            <TextBlock Text="(Potential Pest Threats)" Margin="0,0,0,0" FontSize="9"/>
+
             <TextBox x:Name="FumigationDetailsTextBox" />
 
             <Button Content="Submit Request" Click="SubmitRequest_Click" Margin="0,20,0,0"/>
