--- a/OfficerRequestView.xaml
+++ b/OfficerRequestView.xaml
@@ -21,6 +21,12 @@
                     <DataGridTextColumn Header="Status" Binding="{Binding Status}" Width="*"/>
                 </DataGrid.Columns>
             </DataGrid>
+            <!-- Discount Section -->
+            <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+                <TextBlock Text="Discount:" VerticalAlignment="Center"/>
+                <TextBox x:Name="DiscountTextBox" Width="50" IsReadOnly="True" Margin="5,0,0,0"/>
+                <Button Content="Apply Discount and Accept" Click="ApplyDiscountAndAccept_Click" Margin="10,0,0,0"/>
+            </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
                 <Button Content="Accept" Width="100" Click="AcceptRequest"/>
                 <Button Content="Reject" Width="100" Margin="10,0,0,0" Click="RejectRequest"/>
