user story i5 i believe done

--- a/OfficerRequestView.xaml
+++ b/OfficerRequestView.xaml
@@ -21,11 +21,10 @@
                     <DataGridTextColumn Header="Status" Binding="{Binding Status}" Width="*"/>
                 </DataGrid.Columns>
             </DataGrid>
-            <!-- Discount Section -->
             <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
                 <TextBlock Text="Discount:" VerticalAlignment="Center"/>
-                <TextBox x:Name="DiscountTextBox" Width="50" IsReadOnly="True" Margin="5,0,0,0"/>
-                <Button Content="Apply Discount and Accept" Click="ApplyDiscountAndAccept_Click" Margin="10,0,0,0"/>
+                <TextBox x:Name="DiscountAmount" Width="50" IsReadOnly="True" Margin="5,0,0,0"/>
+                <Button Content="Apply Discount and Accept" Click="DiscountAndAccept" Margin="10,0,0,0"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
                 <Button Content="Accept" Width="100" Click="AcceptRequest"/>
