--- a/EmployeeMainWindow.xaml
+++ b/EmployeeMainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="IAB251_WPF_ASS2.EmployeeMainWindow"
+﻿<Window x:Class="IAB251_WPF_ASS2.EmployeeMainWindow"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -9,6 +9,10 @@
       Title="EmployeeMainWindow">
 
     <Grid>
-        
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Button Content="Register" Width="300" Height="40" Margin="0,10,0,0" Click="Register_Click"/>
+            <Button Content="Login" Width="300" Height="40" Margin="0,10,0,0" Click="Login_Click"/>
+            
+        </StackPanel>
     </Grid>
-</Page>
+</Window>
