--- a/EmployeeMainWindow.xaml
+++ b/EmployeeMainWindow.xaml
@@ -9,6 +9,13 @@
       Title="EmployeeMainWindow">
 
     <Grid>
+        <TextBlock
+                    TextAlignment="Center"
+                    FontSize="24"
+                    FontWeight="Bold"
+                    Foreground="Black"
+                    Margin="258,112,258,267"><Run Language="en-au" Text="   "/><Run Text="Employee Dashboard"/></TextBlock>
+        
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
             <Button Content="Register" Width="300" Height="40" Margin="0,10,0,0" Click="Register_Click"/>
             <Button Content="Login" Width="300" Height="40" Margin="0,10,0,0" Click="Login_Click"/>
