--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,6 +5,12 @@
         ">
     
     <Grid>
+        <TextBlock
+            TextAlignment="Center"
+            FontSize="24"
+            FontWeight="Bold"
+            Foreground="Black"
+            Margin="272,86,272,297"><Run Language="en-au" Text="  "/><Run Text="Customer Dashboard"/></TextBlock>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
             <Button Content="Register" Width="300" Height="40" Margin="0,10,0,0" Click="Register_Click"/>
             <Button Content="Login" Width="300" Height="40" Margin="0,10,0,0" Click="Login_Click"/>
