--- a/CustomerOrEmployee.xaml
+++ b/CustomerOrEmployee.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:IAB251_WPF_ASS2"
         mc:Ignorable="d"
-        Title="CustomerOrEmployee" Height="450" Width="800">
+        Title="CustomerOrEmployee" Height="450" Width="800"
+       Background="White">
     <Grid>
         <TextBlock Text="Welcome to InterPort Cargo!"
                    TextAlignment="Center"
