--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,9 +2,13 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Interport Cargo" Height="450" Width="800
-        ">
+        "
+       Background="White">
     
     <Grid>
+        <Grid>
+            <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden"/>
+        </Grid>
         <TextBlock
             TextAlignment="Center"
             FontSize="24"
