--- a/EmployeeMainWindow.xaml
+++ b/EmployeeMainWindow.xaml
@@ -12,7 +12,8 @@
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
             <Button Content="Register" Width="300" Height="40" Margin="0,10,0,0" Click="Register_Click"/>
             <Button Content="Login" Width="300" Height="40" Margin="0,10,0,0" Click="Login_Click"/>
-            
+            <Button Content="View All Quotations" Width="300" Height="40" Margin="0,10,0,0" Click="ViewAllQuotations_Click"
+                    Visibility="{Binding IsLoggedIn, Converter={StaticResource BoolToVisibilityConverter}}"/>
         </StackPanel>
     </Grid>
 </Window>
