--- a/EmployeeMainWindow.xaml
+++ b/EmployeeMainWindow.xaml
@@ -14,12 +14,18 @@
                     FontSize="24"
                     FontWeight="Bold"
                     Foreground="Black"
-                    Margin="258,112,258,267"><Run Language="en-au" Text="   "/><Run Text="Employee Dashboard"/></TextBlock>
+                    Margin="266,37,250,342"><Run Language="en-au" Text="   "/><Run Text="Employee Dashboard"/></TextBlock>
         
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Button Content="Register" Width="300" Height="40" Margin="0,10,0,0" Click="Register_Click"/>
-            <Button Content="Login" Width="300" Height="40" Margin="0,10,0,0" Click="Login_Click"/>
+            <Button Content="Register" Width="300" Height="40" Margin="0,10,0,0" Click="Register_Click"
+                    Visibility="{Binding IsLoggedOut, Converter={StaticResource BoolToVisibilityConverter}}"/>
+            <Button Content="Login" Width="300" Height="40" Margin="0,10,0,0" Click="Login_Click"
+                    Visibility="{Binding IsLoggedOut, Converter={StaticResource BoolToVisibilityConverter}}"/>
             <Button Content="View All Quotations" Width="300" Height="40" Margin="0,10,0,0" Click="ViewAllQuotations_Click"
+                    Visibility="{Binding IsLoggedIn, Converter={StaticResource BoolToVisibilityConverter}}"/>
+            <Button Content="View Rate Schedule" Width="300" Height="40" Margin="0,10,0,0" Click="ViewRateSchedule_Click"
+                    Visibility="{Binding IsLoggedIn, Converter={StaticResource BoolToVisibilityConverter}}"/>
+            <Button Content="Prepare Quotations" Width="300" Height="40" Margin="0,10,0,0" Click="PrepareQuotations_Click"
                     Visibility="{Binding IsLoggedIn, Converter={StaticResource BoolToVisibilityConverter}}"/>
         </StackPanel>
     </Grid>
