--- a/OfficerRequestView.xaml
+++ b/OfficerRequestView.xaml
@@ -32,6 +32,7 @@
             </StackPanel>
             <TextBox x:Name="rejectMessagetxt" Text="Enter rejection message" Width="300" Height="30"/>
             <TextBlock x:Name="Messagetxt" Foreground="Red" Margin="0,10,0,0"/>
+            <Button Content="Back" Width="100" Click="BackButton_Click" HorizontalAlignment="Left" Margin="0,0,0,10"/>
         </StackPanel>
     </Grid>
 </Window>
