--- a/CustomerOrEmployee.xaml
+++ b/CustomerOrEmployee.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="IAB251_WPF_ASS2.CustomerOrEmployee"
+﻿<Page x:Class="IAB251_WPF_ASS2.CustomerOrEmployee"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -25,4 +25,4 @@
             <Button Content="Employee" Width="300" Height="40" Margin="0,10,0,0" Click="Employee_Click"/>
         </StackPanel>
     </Grid>
-</Window>
+</Page>
