--- a/EmployeeLogin.xaml
+++ b/EmployeeLogin.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="IAB251_WPF_ASS2.EmployeeLogin"
+﻿<Page x:Class="IAB251_WPF_ASS2.EmployeeLogin"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Employee Login" Height="450" Width="800">
@@ -14,4 +14,4 @@
             <TextBlock x:Name="Messagetxt" Foreground="Red" Margin="0,10,0,0"/>
         </StackPanel>
     </Grid>
-</Window>
+</Page>
