--- a/OfficerRequestView.xaml
+++ b/OfficerRequestView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="IAB251_WPF_ASS2.OfficerRequestView"
+﻿<Page x:Class="IAB251_WPF_ASS2.OfficerRequestView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -35,4 +35,4 @@
             <Button Content="Back" Width="100" Click="BackButton_Click" HorizontalAlignment="Left" Margin="0,0,0,10"/>
         </StackPanel>
     </Grid>
-</Window>
+</Page>
