--- a/CustomerRegistration.xaml
+++ b/CustomerRegistration.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="IAB251_WPF_ASS2.CustomerRegistration"
+﻿<Page x:Class="IAB251_WPF_ASS2.CustomerRegistration"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Customer Registration" Height="450" Width="800">
@@ -26,4 +26,4 @@
             <TextBlock x:Name="Messagetxt" Foreground="Red" Margin="0,10,0,0"/>
         </StackPanel>
     </Grid>
-</Window>
+</Page>
