--- a/QuotationRequest.xaml
+++ b/QuotationRequest.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="IAB251_WPF_ASS2.QuotationRequestWindow"
+﻿<Page x:Class="IAB251_WPF_ASS2.QuotationRequestWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Quotation Request" Height="625" Width="800">
@@ -53,4 +53,4 @@
             <TextBlock x:Name="MessageTextBlock" Foreground="Red" Margin="0,10,0,0"/>
         </StackPanel>
     </Grid>
-</Window>
+</Page>
