change to customer reg and unit testing for t2
added optional company field, forgot to do it, works

made unit testing, for t2. 4/5 pass currentlly

--- a/CustomerRegistration.xaml
+++ b/CustomerRegistration.xaml
@@ -13,6 +13,9 @@
             <TextBlock Text="Email Address:" Margin="0,10,0,0" />
             <TextBox x:Name="EmailAddresstxt" />
 
+            <TextBlock Text="Company (Optional):" Margin="0,10,0,0" />
+            <TextBox x:Name="Companytxt" />
+
             <TextBlock Text="Phone Number:" Margin="0,10,0,0" />
             <TextBox x:Name="PhoneNumbertxt" />
 
