--- a/OfficerRequestView.xaml
+++ b/OfficerRequestView.xaml
@@ -22,7 +22,13 @@
                 </DataGrid.Columns>
             </DataGrid>
             <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
-                <TextBlock Text="Discount:" VerticalAlignment="Center"/>
+                <TextBlock Text="Depot Charges:" VerticalAlignment="Center"/>
+                <TextBox x:Name="DepotChargesAmount" Width="80" IsReadOnly="True" Margin="5,0,0,0"/>
+                <TextBlock Text="LCL Charges:" VerticalAlignment="Center" Margin="10,0,0,0"/>
+                <TextBox x:Name="LCLChargesAmount" Width="80" IsReadOnly="True" Margin="5,0,0,0"/>
+                <TextBlock Text="Total Charges:" VerticalAlignment="Center" Margin="10,0,0,0"/>
+                <TextBox x:Name="TotalChargesAmount" Width="80" IsReadOnly="True" Margin="5,0,0,0"/>
+                <TextBlock Text="Discount:" VerticalAlignment="Center" Margin="20,0,0,0"/>
                 <TextBox x:Name="DiscountAmount" Width="50" IsReadOnly="True" Margin="5,0,0,0"/>
                 <Button Content="Apply Discount and Accept" Click="DiscountAndAccept" Margin="10,0,0,0"/>
             </StackPanel>
