--- a/RateSchedule.xaml
+++ b/RateSchedule.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="IAB251_WPF_ASS2.RateSchedule"
+﻿<Page x:Class="IAB251_WPF_ASS2.RateSchedule"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -23,4 +23,4 @@
             </DataGrid>
         </Grid>
     </Grid>
-</Window>
+</Page>
