--- a/CustomerOrEmployee.xaml
+++ b/CustomerOrEmployee.xaml
@@ -8,6 +8,9 @@
         Title="CustomerOrEmployee" Height="450" Width="800"
        Background="White">
     <Grid>
+        <StackPanel VerticalAlignment="Top" HorizontalAlignment="Right" Margin="10" Orientation="Horizontal">
+            <Button Content="Exit" Width="100" Click="ExitButton_Click"/>
+        </StackPanel>
         <TextBlock Text="Welcome to InterPort Cargo!"
                    TextAlignment="Center"
                     FontSize="24"
