--- a/EmployeeMainWindow.xaml
+++ b/EmployeeMainWindow.xaml
@@ -10,7 +10,8 @@
 
     <Grid>
         <StackPanel VerticalAlignment="Top" HorizontalAlignment="Right" Margin="10" Orientation="Horizontal">
-            <Button Content="Back" Width="100" Click="BackButton_Click"/>
+            <Button Content="Back" Width="100" Click="BackButton_Click"
+                    Visibility="{Binding IsLoggedOut, Converter={StaticResource BoolToVisibilityConverter}}"/>
             <Button Content="Logout" Width="100" Click="LogoutButton"
                     Visibility="{Binding IsLoggedIn, Converter={StaticResource BoolToVisibilityConverter}}"/>
         </StackPanel>
