--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,12 +2,12 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Interport Cargo" Height="450" Width="800
-        "
-       Background="White">
+        ">
 
     <Grid>
         <StackPanel VerticalAlignment="Top" HorizontalAlignment="Right" Margin="10" Orientation="Horizontal">
-            <Button Content="Back" Width="100" Click="BackButton_Click"/>
+            <Button Content="Back" Width="100" Click="BackButton_Click"
+                    Visibility="{Binding IsLoggedOut, Converter={StaticResource BoolToVisibilityConverter}}"/>
             <Button Content="Logout" Width="100" Click="LogoutButton"
                     Visibility="{Binding IsLoggedIn, Converter={StaticResource BoolToVisibilityConverter}}"/>
         </StackPanel>
@@ -18,8 +18,10 @@
             Foreground="Black"
             Margin="272,86,272,297"><Run Language="en-au" Text="  "/><Run Text="Customer Dashboard"/></TextBlock>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Button Content="Register" Width="300" Height="40" Margin="0,10,0,0" Click="Register_Click"/>
-            <Button Content="Login" Width="300" Height="40" Margin="0,10,0,0" Click="Login_Click"/>
+            <Button Content="Register" Width="300" Height="40" Margin="0,10,0,0" Click="Register_Click"
+                    Visibility="{Binding IsLoggedOut, Converter={StaticResource BoolToVisibilityConverter}}"/>
+            <Button Content="Login" Width="300" Height="40" Margin="0,10,0,0" Click="Login_Click"
+                    Visibility="{Binding IsLoggedOut, Converter={StaticResource BoolToVisibilityConverter}}"/>
             <Button Content="Request Quotation" Width="300" Height="40" Margin="0,10,0,0" Click="RequestQuotation_Click"
                     Visibility="{Binding IsLoggedIn, Converter={StaticResource BoolToVisibilityConverter}}"/>
         </StackPanel>
