--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -24,6 +24,8 @@
                     Visibility="{Binding IsLoggedOut, Converter={StaticResource BoolToVisibilityConverter}}"/>
             <Button Content="Request Quotation" Width="300" Height="40" Margin="0,10,0,0" Click="RequestQuotation_Click"
                     Visibility="{Binding IsLoggedIn, Converter={StaticResource BoolToVisibilityConverter}}"/>
+            <Button Content="View Sent Quotations" Width="300" Height="40" Margin="0,10,0,0" Click="ViewQuotation_Click"
+        Visibility="{Binding IsLoggedIn, Converter={StaticResource BoolToVisibilityConverter}}"/>
         </StackPanel>
     </Grid>
 </Page>
