--- a/QuotationRequest.xaml
+++ b/QuotationRequest.xaml
@@ -51,6 +51,8 @@
 
             <Button Content="Submit Request" Click="SubmitRequest_Click" Margin="0,20,0,0"/>
             <TextBlock x:Name="MessageTextBlock" Foreground="Red" Margin="0,10,0,0"/>
+
+            <Button Content="Back" Width="100" Click="BackButton_Click" HorizontalAlignment="Left" Margin="0,0,0,10"/>
         </StackPanel>
     </Grid>
 </Page>
